doc: update on swagger documentation
