# app/app/Http/Controllers/Api/v1/ProductController.php
@@ -16,6 +16,38 @@ class ProductController extends Controller
         $this->productService = $productService;
     }
 
+    /**
+     * @OA\Get(
+     *     path="/product/search",
+     *     tags={"product"},
+     *     summary="Finds Product by name/ref",
+     *     description="Search for a product by name and/or reference",
+     *     @OA\Parameter(
+     *         name="name",
+     *         in="query",
+     *         description="name of the product",
+     *         required=true,
+     *     ),
+     *     @OA\Parameter(
+     *         name="reference",
+     *         in="query",
+     *         description="reference of the product",
+     *         required=false,
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items()
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Product with specified name or reference not found"
+     *     ),
+     *   )
+     */
     public function search(ProductRequest $request)
     {
         $searchParam = $request->query();
