# app/storage/api-docs/api-docs.json
@@ -53,12 +53,32 @@
                                 "properties": {
                                     "address": {
                                         "description": "object containing delivery_address attributes",
+                                        "properties": {
+                                            "address": {
+                                                "description": "address line",
+                                                "type": "string"
+                                            },
+                                            "zip": {
+                                                "description": "zip number",
+                                                "type": "string"
+                                            },
+                                            "number": {
+                                                "description": "address number",
+                                                "type": "integer"
+                                            },
+                                            "city_id": {
+                                                "description": "id of the city",
+                                                "type": "integer"
+                                            }
+                                        },
                                         "type": "object"
                                     },
                                     "products": {
                                         "description": "array of product id",
                                         "type": "array",
-                                        "items": "[]"
+                                        "items": {
+                                            "type": "integer"
+                                        }
                                     },
                                     "order_date": {
                                         "description": "the date of the order",
@@ -95,6 +115,46 @@
                     },
                     "404": {
                         "description": "Order with specified it not found"
+                    }
+                }
+            }
+        },
+        "/product/search": {
+            "get": {
+                "tags": [
+                    "product"
+                ],
+                "summary": "Finds Product by name/ref",
+                "description": "Search for a product by name and/or reference",
+                "operationId": "App\\Http\\Controllers\\Api\\v1\\ProductController::search",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "name of the product",
+                        "required": true
+                    },
+                    {
+                        "name": "reference",
+                        "in": "query",
+                        "description": "reference of the product",
+                        "required": false
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {}
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Product with specified name or reference not found"
                     }
                 }
             }
